--- a/rag_microservice/pyproject.toml
+++ b/rag_microservice/pyproject.toml
@@ -5,6 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "beautifulsoup4>=4.13.4",
     "fastapi[standard]>=0.116.1",
+    "httpx>=0.28.1",
+    "langchain>=0.3.27",
+    "langchain-chroma>=0.2.5",
+    "langchain-openai>=0.3.28",
+    "markdown>=3.8.2",
+    "pymupdf>=1.26.3",
     "uvicorn>=0.35.0",
 ]
