--- a/rag_microservice/pyproject.toml
+++ b/rag_microservice/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "langchain>=0.3.27",
     "langchain-chroma>=0.2.5",
     "langchain-openai>=0.3.28",
+    "langfuse>=3.2.1",
     "markdown>=3.8.2",
     "pymupdf>=1.26.3",
     "uvicorn>=0.35.0",
