--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -168,8 +168,8 @@ services:
         - OPENAI_API_KEY=${OPENAI_API_KEY}
         - LANGFUSE_PUBLIC_KEY=${LANGFUSE_PUBLIC_KEY}
         - LANGFUSE_SECRET_KEY=${LANGFUSE_SECRET_KEY}
-        - LANGFUSE_HOST=${LANGFUSE_HOST}
-        - CHROMA_DB_DIR=${CHROMA_DB_DIR}
+        - LANGFUSE_HOST=http://langfuse-web:3000
+        - CHROMA_DB_DIR=/app/vector_store
       volumes:
         - chroma_vector_store:/app/vector_store
       depends_on:
